--- a/P_Thesaurus/P_Thesaurus.csproj
+++ b/P_Thesaurus/P_Thesaurus.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +76,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="AppBusiness\EnumsAndStructs\" />
+    <Folder Include="AppBusiness\HistoryReader\" />
+    <Folder Include="AppBusiness\WIN32\" />
+    <Folder Include="Models\JSON\" />
+    <Folder Include="Models\WIN32\" />
+    <Folder Include="Views\Objects\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
