--- a/P_Thesaurus/P_Thesaurus.csproj
+++ b/P_Thesaurus/P_Thesaurus.csproj
@@ -70,7 +70,6 @@
     <Compile Include="Models\FtpModel.cs" />
     <Compile Include="Models\FolderModel.cs" />
     <Compile Include="Models\WebModel.cs" />
-    <Compile Include="Models\WIN32\AsyncFolderScanning.cs" />
     <Compile Include="Models\WIN32\FileAPI.cs" />
     <Compile Include="Models\WIN32\FILE_INFO_BY_HANDLE_STRUCT.cs" />
     <Compile Include="Models\WIN32\FILE_TIME.cs" />
@@ -81,6 +80,21 @@
     <Compile Include="Models\WIN32\WIN32_FIND_DATA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\FolderNavigation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FolderNavigation.Designer.cs">
+      <DependentUpon>FolderNavigation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\IHisoryView.cs" />
+    <Compile Include="Views\INavigationView.cs" />
+    <Compile Include="Views\IView.cs" />
+    <Compile Include="Views\NavigationView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\NavigationView.Designer.cs">
+      <DependentUpon>NavigationView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
