--- a/P_Thesaurus/P_Thesaurus.csproj
+++ b/P_Thesaurus/P_Thesaurus.csproj
@@ -48,7 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppBusiness\EnumsAndStructs\EnumsAndStructs.cs" />
+    <Compile Include="AppBusiness\EnumsAndStructs.cs" />
+    <Compile Include="AppBusiness\Log.cs" />
     <Compile Include="AppBusiness\WIN32\File.cs" />
     <Compile Include="AppBusiness\WIN32\Folder.cs" />
     <Compile Include="AppBusiness\WIN32\FolderObject.cs" />
@@ -61,12 +62,6 @@
     <Compile Include="Controllers\LaunchController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\WebController.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Models\FtpModel.cs" />
     <Compile Include="Models\FolderModel.cs" />
     <Compile Include="Models\WebModel.cs" />
@@ -80,20 +75,60 @@
     <Compile Include="Models\WIN32\WIN32_FIND_DATA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\BaseView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\BaseView.Designer.cs">
+      <DependentUpon>BaseView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FolderHistoryView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FolderHistoryView.Designer.cs">
+      <DependentUpon>FolderHistoryView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FolderNavigation.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\FolderNavigation.Designer.cs">
       <DependentUpon>FolderNavigation.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\IHisoryView.cs" />
-    <Compile Include="Views\INavigationView.cs" />
+    <Compile Include="Views\FtpHistoryView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FtpHistoryView.Designer.cs">
+      <DependentUpon>FtpHistoryView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\HistoryView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\HistoryView.Designer.cs">
+      <DependentUpon>HistoryView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\IView.cs" />
+    <Compile Include="Views\LaunchingView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\LaunchingView.Designer.cs">
+      <DependentUpon>LaunchingView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\NavigationView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\NavigationView.Designer.cs">
       <DependentUpon>NavigationView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WebNavigation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\WebNavigation.Designer.cs">
+      <DependentUpon>WebNavigation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WebNavigationView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\WebNavigationView.Designer.cs">
+      <DependentUpon>WebNavigationView.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -104,6 +139,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\BaseView.resx">
+      <DependentUpon>BaseView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FolderNavigation.resx">
+      <DependentUpon>FolderNavigation.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
