--- a/P_Thesaurus/P_Thesaurus.csproj
+++ b/P_Thesaurus/P_Thesaurus.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AppBusiness\HistoryReader\History.cs" />
     <Compile Include="AppBusiness\HistoryReader\HistoryEntry.cs" />
     <Compile Include="AppBusiness\EnumsAndStructs.cs" />
+    <Compile Include="AppBusiness\HistoryReader\ISecurityCritical.cs" />
     <Compile Include="AppBusiness\Log.cs" />
     <Compile Include="AppBusiness\HistoryReader\IHistory.cs" />
     <Compile Include="Models\JSON\JsonReader.cs" />
