--- a/P_Thesaurus/P_Thesaurus.csproj
+++ b/P_Thesaurus/P_Thesaurus.csproj
@@ -129,6 +129,10 @@
     <Compile Include="Views\NavigationView.Designer.cs">
       <DependentUpon>NavigationView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Objects\BackArrow.cs" />
+    <Compile Include="Views\Objects\Filter.cs" />
+    <Compile Include="Views\Objects\HistoryPanel.cs" />
+    <Compile Include="Views\Objects\SearchBar.cs" />
     <Compile Include="Views\WebNavigation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,8 +175,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\Objects\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
