--- a/P_Thesaurus/P_Thesaurus.csproj
+++ b/P_Thesaurus/P_Thesaurus.csproj
@@ -59,6 +59,7 @@
     <Compile Include="AppBusiness\HistoryReader\ISecurityCritical.cs" />
     <Compile Include="AppBusiness\Logs\Log.cs" />
     <Compile Include="AppBusiness\HistoryReader\IHistory.cs" />
+    <Compile Include="Controllers\IController.cs" />
     <Compile Include="Models\JSON\JsonReader.cs" />
     <Compile Include="AppBusiness\WIN32\File.cs" />
     <Compile Include="AppBusiness\WIN32\Folder.cs" />
@@ -68,7 +69,6 @@
     <Compile Include="Controllers\FolderController.cs" />
     <Compile Include="Controllers\FolderNavigationController.cs" />
     <Compile Include="Controllers\FtpController.cs" />
-    <Compile Include="Controllers\IBaseController.cs" />
     <Compile Include="Controllers\LaunchController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\WebController.cs" />
