--- a/P_Thesaurus/P_Thesaurus.csproj
+++ b/P_Thesaurus/P_Thesaurus.csproj
@@ -135,11 +135,11 @@
     <Compile Include="Views\WebNavigation.Designer.cs">
       <DependentUpon>WebNavigation.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\WebNavigationView.cs">
+    <Compile Include="Views\WebHistoryView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\WebNavigationView.Designer.cs">
-      <DependentUpon>WebNavigationView.cs</DependentUpon>
+    <Compile Include="Views\WebHistoryView.Designer.cs">
+      <DependentUpon>WebHistoryView.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
